--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -9,7 +9,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"
                 class="active" aria-current="true"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner col-8 col-sm-12">
             <div class="carousel-item active">
                 <img width="100%" src="/assets/img/1.png" alt="">
             </div>
@@ -33,99 +33,7 @@
     </div>
 
 
-    <div id="cards" class="d-flex justify-content-center flex-wrap">
-        <div id="promocoes" class="card m-1 col-5 col-md-3 col-">
-            <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text>
-            </svg> -->
-            <div class="card-body">
-                <p>Promoção</p>
-                <h5 class="card-title"></h5>
-                <p class="card-text mb-0"><b>Ingredientes:</b></p>
-                <p class="card-text mb-0"> Pão, carne, queijo, alface, tomate, cebola, maionese, ketchup e mostarda.
-
-                </p>
-                <p class="card-text mt-0 mb-0"><b>Valor:</b></p>
-                <p class="card-text"> R$ 10.00</p>
-                <a id="buttoncard" routerLink="/login" href="#" class="btn btn-primary">Peça o seu
-                    agora</a>
-
-            </div>
-        </div>
-
-        <div id="promocoes" class="card m-1 col-5 col-md-3 col-">
-            <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                     role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                     <title>Placeholder</title>
-                     <rect width="100%" height="100%" fill="#868e96"></rect>
-                     <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text>
-                 </svg> -->
-            <div class="card-body">
-                <p>Promoção</p>
-                <h5 class="card-title"></h5>
-                <p class="card-text mb-0"><b>Ingredientes:</b></p>
-                <p class="card-text mb-0">Pão, Carne, Queijo, Ovo e Salada                </p>
-                <p class="card-text mt-0 mb-0"><b>Valor:</b></p>
-                <p class="card-text"></p>
-                <a id="buttoncard" routerLink="/login" href="#" class="btn btn-primary">Peça o seu
-                    agora</a>
-
-            </div>
-        </div>
-
-        <div id="promocoes" class="card m-1 col-5 col-md-3 col-">
-            <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                         role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                         <title>Placeholder</title>
-                         <rect width="100%" height="100%" fill="#868e96"></rect>
-                         <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text>
-                     </svg> -->
-            <div class="card-body">
-                <p>Promoção</p>
-                <h5 class="card-title"></h5>
-                <p class="card-text mb-0"><b>Ingredientes:</b></p>
-                <p class="card-text mb-0">Pão de forma, presunto, queijo, tomate, alface, maionese, ketchup e mostarda.
-
-                </p>
-                <p class="card-text mt-0 mb-0"><b>Valor:</b></p>
-                <p class="card-text"> R$ 5.00</p>
-                <a id="buttoncard" routerLink="/login" href="#" class="btn btn-primary">Peça o seu
-                    agora</a>
-
-            </div>
-        </div>
-
-        <div id="promocoes" class="card m-1 col-5 col-md-3 col-">
-            <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                             role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                             <title>Placeholder</title>
-                             <rect width="100%" height="100%" fill="#868e96"></rect>
-                             <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text>
-                         </svg> -->
-            <div class="card-body">
-                <p>Promoção</p>
-                <h5 class="card-title"></h5>
-                <p class="card-text mb-0"><b>Ingredientes:</b></p>
-                <p class="card-text mb-0"> Pão, carne, queijo, alface, tomate, cebola, maionese, ketchup e mostarda.
-
-                </p>
-                <p class="card-text mt-0 mb-0"><b>Valor:</b></p>
-                <p class="card-text">15.00</p>
-                <a id="buttoncard" routerLink="/login" href="#" class="btn btn-primary">Peça o seu
-                    agora</a>
-
-            </div>
-        </div>
-
-    </div>
-
-
-
-
-
+   
     <div id="cards" class="d-flex justify-content-center flex-wrap">
         <div id="promocoes" *ngFor="let sanduiches of sanduiche |async" class="card m-1 col-5 col-md-3 col-">
             <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
