--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -1,6 +1,10 @@
 
 #carouselExampleIndicators{
     margin: 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
     
 }
@@ -19,10 +23,7 @@
 
 
 
-#carousel-inner img{
-    width: 100%;
-    height: 100%;
-}
+
 
 .promocoes{
  
@@ -34,5 +35,6 @@
         font-size: 10px;
     }
 }
+
 
 
