--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,39 +1,41 @@
 <main>
 
-    <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class=""
-                aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"
-                class=""></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"
-                class="active" aria-current="true"></button>
+    <div class="container d-flex justify-content-center">
+        <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-10 col-xl-10 col-sm-12">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class=""
+                    aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2" class=""></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3" class="active" aria-current="true"></button>
+            </div>
+            <div class="carousel-inner ">
+                <div class="carousel-item active">
+                    <img width="100%" src="/assets/img/1.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img width="100%" src="/assets/img/2.png" alt="">
+                </div>
+                <div class="carousel-item ">
+                    <img width="100%" src="/assets/img/3.png" alt="">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner col-8 col-sm-12">
-            <div class="carousel-item active">
-                <img width="100%" src="/assets/img/1.png" alt="">
-            </div>
-            <div class="carousel-item">
-                <img width="100%" src="/assets/img/2.png" alt="">
-            </div>
-            <div class="carousel-item ">
-                <img width="100%" src="/assets/img/3.png" alt="">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
 
 
-   
+
     <div id="cards" class="d-flex justify-content-center flex-wrap">
         <div id="promocoes" *ngFor="let sanduiches of sanduiche |async" class="card m-1 col-5 col-md-3 col-">
             <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
@@ -73,23 +75,27 @@
                     conhecida pela qualidade excepcional dos nossos lanches e pela experiência gastronômica única que
                     oferecemos.
                 </p>
-                <p class="card-text d-none d-sm-none"> Nossos sanduíches são preparados com ingredientes frescos e selecionados,
+                <p class="card-text d-none d-sm-none"> Nossos sanduíches são preparados com ingredientes frescos e
+                    selecionados,
                     garantindo sabores autênticos e texturas incríveis. Valorizamos a qualidade e o sabor, e é por isso
                     que trabalhamos com maionese caseira, feita com ingredientes frescos e naturais, que dá um toque
                     especial a cada mordida.
                 </p>
-                <p class="card-text d-none d-sm-none"> No Wallace Lanches, você encontrará um cardápio diversificado, com opções para
+                <p class="card-text d-none d-sm-none"> No Wallace Lanches, você encontrará um cardápio diversificado,
+                    com opções para
                     todos os gostos. Temos sanduíches clássicos que conquistaram o coração dos nossos clientes, bem como
                     criações exclusivas que vão surpreender o seu paladar. E se você tiver alguma preferência especial
                     ou restrição alimentar, nossa equipe estará pronta para personalizar o seu pedido.
                 </p>
-                <p class="card-text d-none d-sm-block"> Além da qualidade dos nossos lanches, também nos orgulhamos do nosso ambiente
+                <p class="card-text d-none d-sm-block"> Além da qualidade dos nossos lanches, também nos orgulhamos do
+                    nosso ambiente
                     acolhedor e amigável. Quer você esteja procurando um lugar para uma refeição rápida ou deseje
                     desfrutar de uma refeição descontraída com amigos e familiares, o Wallace Lanches é o lugar ideal.
                     Nossa equipe atenciosa está sempre pronta para garantir que você tenha uma experiência agradável e
                     memorável em nossa lanchonete.
                 </p>
-                <p class="card-text d-none d-sm-none"> Se preferir desfrutar dos nossos lanches no conforto da sua casa, oferecemos
+                <p class="card-text d-none d-sm-none"> Se preferir desfrutar dos nossos lanches no conforto da sua casa,
+                    oferecemos
                     serviço de delivery rápido e eficiente. Basta fazer o seu pedido e em breve estaremos levando até
                     você a satisfação de um delicioso sanduíche do Wallace Lanches.
 
